# cxx-template

./: .dockerignore  CMakeLists.txt
docker/devel-ubuntu-gcc-emacs/: Dockerfile
ext/binutils/: install
ext/boost/: CMakeLists.txt
ext/cmake/: install
ext/gcc/: install
ext/googletest/: CMakeLists.txt
ext/icu4c/: CMakeLists.txt
ext/llvm/: install
